Jh/code refactoring (#70)
* [fix]: contracterrorfix

* [fix]:fcm 알림수정

---------

Co-authored-by: GyeongNam <63902992+GyeongNam@users.noreply.github.com>